<resources>
    <string name="app_name">Micro POS</string>
    <string name="cash_in">Cash In +</string>
    <string name="cash_out">Cash Out -</string>
    <string name="percentage">%</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="ac">AC</string>
    <string name="minus">-</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="multiply">*</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="div">/</string>
    <string name="close_bracket">)</string>
    <string name="open_bracket">(</string>
    <string name="backspace">C</string>
    <string name="online">Online</string>
    <string name="cash">Cash</string>
    <string name="due">Due</string>
    <string name="payment_method">Payment Method</string>
    <string name="paid">Paid</string>
    <string name="cancelled">Cancelled</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="selected_date_format">%d-%02d-%02d</string>
    <string name="pdf_generator">Account Statement</string>
    <string name="generate_statement">Generate Statement</string>
    <string name="payment_type">Payment Type:</string>
    <string name="payment_status">Payment Status:</string>
    <string name="select_end_date">Select End Date</string>
    <string name="end_date">End Date:</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="start_date">Start Date:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account_statement">Account Statement</string>
</resources>